fix search animation cut off on ios

--- a/static/css/homepage.scss
+++ b/static/css/homepage.scss
@@ -267,7 +267,6 @@ $search-answer-bottom: 48px;
       font-family: $headings-font-family;
       font-size: 16px;
       size: 30px;
-      line-height: 52px;
       z-index: 100;
       position: relative;
     }
